<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorPrimaryLight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.tomtom.tom.tvshowslist.ui.list.MoviesListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_indication_list"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_recycler"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/detail_indication_list" />

</LinearLayout>