<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="@color/colorPrimaryLight"
    android:id="@+id/list_container">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"  />

</android.support.constraint.ConstraintLayout>
